chore: intégration SonarQube, couverture de code (>80%) et corrections
- Ajout de SonarQube et DB dans docker-compose.yml
- Configuration de Jacoco et SonarQube dans le pom.xml
- Résolution de 22 issues (3 critic, 5 major, 14 minor)
- Couverture de code poussée à >80% avec de nouveaux tests
- Nouveaux tests: AnnonceServiceTest (12 tests rajoutés), CategoryControllerIT, RateLimitFilterTest, CustomUserDetailsServiceTest, MetaControllerTest
- Nettoyage du code, refactorisation (DTO Record, wrappers enlevés, exceptions)
- Export de la collection Postman (ajout)
- Profil de dev local (application-dev.yml)